# ha-multimodal-rag

./: .gitignore  CHANGELOG.md  DEPLOYMENT_READY_REPORT.md  HACS_BUGFIX_LOG.md  HACS_DIAGNOSIS.md  INSTALLATION_DE.md  LICENSE  README.md  hacs.json  install.sh  pyproject.toml  pytest.ini  requirements.txt  template.txt
.claude/memory/: MEMORY.md  architecture.md  decisions.md  progress.md
custom_components/multimodal_rag/: __init__.py  config_flow.py  const.py  http_views.py  manifest.json  services.py  services.yaml  strings.json
custom_components/multimodal_rag/db/: __init__.py  base.py  factory.py  qdrant_db.py  sqlite_db.py
custom_components/multimodal_rag/embeddings/: __init__.py  base.py  claude_embeddings.py  factory.py  sentence_transformers.py
custom_components/multimodal_rag/llm/: __init__.py  base.py  claude.py  factory.py  ollama.py
custom_components/multimodal_rag/processors/: __init__.py  audio_processor.py  image_processor.py  pdf_processor.py  text_processor.py
custom_components/multimodal_rag/rag/: __init__.py  chunker.py  document_processor.py  engine.py  similarity_search.py
custom_components/multimodal_rag/tests/: __init__.py  conftest.py  test_chunker.py  test_factories.py  test_processors.py  test_rag_engine.py  test_similarity_search.py  test_sqlite_db.py
custom_components/multimodal_rag/www/: panel.html
web-ui/: .env.example  .eslintrc.json  README.md  TESTING_REPORT.md  VALIDATION_REPORT.md  index.html  package.json  tailwind.config.js  tsconfig.json
web-ui/src/: App.vue  style.css
web-ui/src/api/: auth.ts  client.ts  (+4 more)
(+11 files in other folders)
