[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ha-multimodal-rag"
version = "1.0.0"
description = "Multimodal RAG custom integration for Home Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["homeassistant", "rag", "llm", "ai", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["custom_components/multimodal_rag/tests"]

[tool.coverage.run]
source = ["custom_components/multimodal_rag"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
